--- a/build.xml
+++ b/build.xml
@@ -1,17 +1,17 @@
 
 <project name="Interpretador" default="gerar" basedir=".">
  
-	<property name = "src.dir" value = 
+	<!--<property name = "src.dir" value = 
 			"src/br/ufpb/iged/interpretador/tradutor/intermediario/gramatica"/>
 		<property name = "dest.dir" value = 
 			"src/br/ufpb/iged/interpretador/tradutor/intermediario/parser"/>
-	<property name="grammar" value = "Intermediario.g"/>
+	<property name="grammar" value = "Intermediario.g"/>-->
 	
-	<!--<property name = "src.dir" value = 
+	<property name = "src.dir" value = 
 		"src/br/ufpb/iged/interpretador/bytecodeassembler/gramaticas"/>
 	<property name = "dest.dir" value = 
 			"src/br/ufpb/iged/interpretador/bytecodeassembler/parser"/>
-	<property name="grammar" value = "Assembler.g"/>-->
+	<property name="grammar" value = "Bytecodes.g"/>
 	
     
     <target name="clean">
