--- a/build.xml
+++ b/build.xml
@@ -1,35 +1,78 @@
 
-<project name="Interpretador" default="gerar" basedir=".">
- 
-	<!--<property name = "src.dir" value = 
-			"src/br/ufpb/iged/interpretador/tradutor/intermediario/gramatica"/>
-		<property name = "dest.dir" value = 
-			"src/br/ufpb/iged/interpretador/tradutor/intermediario/parser"/>
-	<property name="grammar" value = "Intermediario.g"/>-->
+<project name="Interpretador" default="gerarSymtab" basedir=".">
 	
 	<property name = "src.dir" value = 
-		"src/br/ufpb/iged/interpretador/bytecodeassembler/gramaticas"/>
-	<property name = "dest.dir" value = 
+		"src/br/ufpb/iged/interpretador/gramaticas"/>
+	<property name = "destBytecodes.dir" value = 
 			"src/br/ufpb/iged/interpretador/bytecodeassembler/parser"/>
-	<property name="grammar" value = "Bytecodes.g"/>
+	<property name="bytecodes.gram" value = "Bytecodes.g"/>
+	<property name = "destIntermediario.dir" value = 
+				"src/br/ufpb/iged/interpretador/tradutor/intermediario/parser"/>
+	<property name="intermediario.gram" value = "Intermediario.g"/>
+	<property name = "destSymtab.dir" value = 
+				"src/br/ufpb/iged/interpretador/symboltable/parser"/>
+	<property name="def.gram" value = "Def.g"/>
+	<property name = "destSymtab.dir" value = 
+				"src/br/ufpb/iged/interpretador/symboltable/parser"/>
+	<property name="ref.gram" value = "Ref.g"/>
 	
     
-    <target name="clean">
+    <target name="cleanBytecodes">
     	<delete>
-			<fileset dir="${dest.dir}">
+			<fileset dir="${destBytecodes.dir}">
 	    		<include name="*.java"/>
 				<include name="*.tokens"/>
 			</fileset>
 		</delete>
 	</target>
     	
-	<target name="gerar" depends="clean">
+	<target name="gerarBytecodes" depends="cleanBytecodes">
 		<java classname="org.antlr.Tool" fork="true" failonerror="true">
 			<arg value="-verbose"/>
 			<arg value="-make"/>
 			<arg value="-o"/>
-			<arg path="${dest.dir}"/>
-			<arg path="${src.dir}/${grammar}"/>
+			<arg path="${destBytecodes.dir}"/>
+			<arg path="${src.dir}/${bytecodes.gram}"/>
+		</java>
+	</target>
+	
+	 
+	<target name="cleanIntermediario">
+	    <delete>
+			<fileset dir="${destIntermediario.dir}">
+		    	<include name="*.java"/>
+				<include name="*.tokens"/>
+			</fileset>
+		</delete>
+	</target>
+	    	
+	<target name="gerarIntermediario" depends="cleanIntermediario">
+		<java classname="org.antlr.Tool" fork="true" failonerror="true">
+			<arg value="-verbose"/>
+			<arg value="-make"/>
+			<arg value="-o"/>
+			<arg path="${destIntermediario.dir}"/>
+			<arg path="${src.dir}/${intermediario.gram}"/>
+		</java>
+	</target>
+	
+	<target name="cleanSymtab">
+		<delete>
+			<fileset dir="${destSymtab.dir}">
+			    <include name="*.java"/>
+				<include name="*.tokens"/>
+			</fileset>
+		</delete>
+	</target>
+		    	
+	<target name="gerarSymtab" depends="cleanSymtab">
+		<java classname="org.antlr.Tool" fork="true" failonerror="true">
+			<arg value="-verbose"/>
+			<arg value="-make"/>
+			<arg value="-o"/>
+			<arg path="${destSymtab.dir}"/>
+			<arg path="${src.dir}/${def.gram}"/>
+			<arg path="${src.dir}/${ref.gram}"/>
 		</java>
 	</target>
  
