--- a/build.xml
+++ b/build.xml
@@ -1,35 +1,35 @@
 
-<project name="Interpretador" default="gerarSymtab" basedir=".">
+<project name="Interpretador" default="gerar" basedir=".">
 	
 	<property name = "src.dir" value = 
 		"src/br/ufpb/iged/interpretador/gramaticas"/>
-	<property name = "destAssembler.dir" value = 
-			"src/br/ufpb/iged/interpretador/bytecodeassembler/parser"/>
+	<property name = "dest.dir" value = 
+			"src/br/ufpb/iged/interpretador/parser"/>
 	<property name="assembler.gram" value = "Assembler.g"/>
+	<property name="def.gram" value = "Def.g"/>
+	<property name="ref.gram" value = "Ref.g"/>
 	<property name = "destIntermediario.dir" value = 
 				"src/br/ufpb/iged/interpretador/tradutor/intermediario/parser"/>
 	<property name="intermediario.gram" value = "Intermediario.g"/>
-	<property name = "destSymtab.dir" value = 
-				"src/br/ufpb/iged/interpretador/symboltable/parser"/>
-	<property name="def.gram" value = "Def.g"/>
-	<property name="ref.gram" value = "Ref.g"/>
     
-    <target name="cleanAssembler">
+    <target name="clean">
     	<delete>
-			<fileset dir="${destAssembler.dir}">
+			<fileset dir="${dest.dir}">
 	    		<include name="*.java"/>
 				<include name="*.tokens"/>
 			</fileset>
 		</delete>
 	</target>
     	
-	<target name="gerarAssembler" depends="cleanAssembler">
+	<target name="gerar" depends="clean">
 		<java classname="org.antlr.Tool" fork="true" failonerror="true">
 			<arg value="-verbose"/>
 			<arg value="-make"/>
 			<arg value="-o"/>
-			<arg path="${destAssembler.dir}"/>
+			<arg path="${dest.dir}"/>
 			<arg path="${src.dir}/${assembler.gram}"/>
+			<arg path="${src.dir}/${def.gram}"/>
+			<arg path="${src.dir}/${ref.gram}"/>
 		</java>
 	</target>
 	
@@ -52,27 +52,6 @@
 			<arg path="${src.dir}/${intermediario.gram}"/>
 		</java>
 	</target>
-	
-	<target name="cleanSymtab" depends="gerarAssembler">
-		<delete>
-			<fileset dir="${destSymtab.dir}">
-			    <include name="*.java"/>
-				<include name="*.tokens"/>
-			</fileset>
-		</delete>
-	</target>
-		    	
-	<target name="gerarSymtab" depends="cleanSymtab">
-		<java classname="org.antlr.Tool" fork="true" failonerror="true">
-			<arg value="-verbose"/>
-			<arg value="-make"/>
-			<arg value="-o"/>
-			<arg path="${destSymtab.dir}"/>
-			<arg path="${src.dir}/${def.gram}"/>
-			<arg path="${src.dir}/${ref.gram}"/>
-		</java>
-	</target>
- 
  
 </project>
 
